--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -41,6 +41,8 @@ ul{
   display: flex;
   flex-direction: column;
   gap: 16px;
+
+  padding: 24px 0;
 }
 
 ul li a {
@@ -66,4 +68,35 @@ transition: background .2s;
 ul li a:hover{
   background: rgba(255, 255, 255, 0.5);border: 1.5px solid white;
 
+}
+
+/*social links*/
+#social-links {
+display: flex;
+padding: 24px 0;
+font-size: 24px;
+justify-content: center;
+align-items: flex-start;
+align-self: stretch;
+}
+
+/*para as coisas ficarem ao centro perfeitas*/
+#social-links a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  transition: background 0.2s;
+  border-radius: 50%;
+}
+
+#social-links a:hover{
+  background: rgba(221, 216, 216, 0.604);
+  padding: 16px;
+}
+
+footer{
+  padding: 24px 0;
+  text-align: center;
+  font-size: 14px;
 }
