--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -4,13 +4,32 @@
    box-sizing: border-box;
 }
   
+:root {
+  --text-color: white; 
+  --bg-url: url(./images/dark-mode.jpg);
+  --stroke-color: rgba(255, 255, 255, 0.50);
+  --surface-color:rgba(255, 255, 255, 0.050);
+  --surface-color-hover:rgba(0, 0, 0, 0.02);
+  --highlight-color: rgba(255, 255, 255, 0.2);
+  --swicht-bg-url: url(./assets/moon-stars.svg);
+}
+
+.light{
+  --text-color: black;
+  --bg-url: url(./images/light-mode.jpg);
+  --stroke-color: rgba(0, 0, 0, 0.50);
+  --surface-color:rgba(0, 0, 0, 0.50);
+  --surface-color-hover:rgba(0, 0, 0, 0.02);
+  --highlight-color: rgba(0, 0, 0, 0.1);
+  --swicht-bg-url: url(./assets/sun.svg);
+}
   body {
-   background: url(./Photos-001/Mobile/parede-de-concreto.jpg) no-repeat top center/cover;
+   background:var(--bg-url)  no-repeat top center/cover;
 }
 
 body * {
   font-family: "inter", sans-serif;
-  color:black;
+  color:var(--text-color);
 }
 
 #container {
@@ -19,6 +38,7 @@ body * {
   padding: 0 24px;
 }
 
+/*profile*/
 #profile {
   text-align: center;
   padding: 24px;
@@ -28,10 +48,48 @@ body * {
   width: 112px;
 }
 
-#profilep {
+#profile p {
 font-weight: 500;
 line-height: 24px;
 margin-top: 8px;
+}
+
+#swicht{
+  position: relative;
+  width: 64px;
+
+  margin: 4px auto;
+}
+
+/*swicht*/
+#swicht button{
+  width: 32px;
+  height: 32px;
+  background: white var(--swicht-bg-url) no-repeat center;
+  border: 0;
+  border-radius: 50%;
+
+  position: absolute;
+  top:50%;
+  left:0;
+  z-index: 1;
+  transform: translateY(-50%);
+}
+
+.light #switch button{
+  right: 0;
+  left: initial';
+}
+
+#swicht span{
+  display: block;
+  width: 64px;
+  height: 24px;
+  background: var(--surface-color);
+  border: 1px solid var(--stroke-color);
+  backdrop-filter: blur (4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 9999px;
 }
 
 /* links */
@@ -53,7 +111,7 @@ ul li a {
 padding: 16px 24px;
 
 background: rgba(255, 255, 255, 0.10);
-border: 1px solid rgba(255, 255, 255, 0.50);
+border: 1px solid var(--stroke-color);
 border-radius: 8px;
 
 backdrop-filter: blur(4px);
@@ -66,7 +124,8 @@ transition: background .2s;
 
 /* pseudo-selector */
 ul li a:hover{
-  background: rgba(255, 255, 255, 0.5);border: 1.5px solid white;
+  background: var(--surface-color-hover);
+  border: 1.5px solid var(--text-color);
 
 }
 
@@ -91,8 +150,7 @@ align-self: stretch;
 }
 
 #social-links a:hover{
-  background: rgba(221, 216, 216, 0.604);
-  padding: 16px;
+  background: var(--highlight-color);
 }
 
 footer{
