--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -23,8 +23,10 @@
   --highlight-color: rgba(0, 0, 0, 0.1);
   --swicht-bg-url: url(./assets/sun.svg);
 }
-  body {
-   background:var(--bg-url)  no-repeat top center/cover;
+
+body {
+  background:var(--bg-url)  no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -55,34 +57,39 @@ line-height: 24px;
 margin-top: 8px;
 }
 
-#swicht{
+#switch{
   position: relative;
   width: 64px;
 
   margin: 4px auto;
 }
 
-/*swicht*/
-#swicht button{
+/*switch*/
+#switch button {
   width: 32px;
   height: 32px;
   background: white var(--swicht-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
-
   position: absolute;
   top:50%;
   left:0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s;
 }
 
 .light #switch button {
-  right:0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
+  left:34px;
 }
 
-#swicht span{
+#switch button:hover {
+outline: 8px solid var(--highlight-color);
+}
+
+#switch span {
   display: block;
   width: 64px;
   height: 24px;
@@ -108,32 +115,36 @@ ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
+
   padding: 16px 24px;
+
   background: rgba(255, 255, 255, 0.10);
   border: 1px solid var(--stroke-color);
   border-radius: 8px;
+
   backdrop-filter: blur(4px);
   -webkit-background-filter: blur(4px);
+
   text-decoration: none;
   font-weight: 500;
-  transition: background .2s;
+
+  transition: background 0.2s;
 }
 
 /* pseudo-selector */
 ul li a:hover{
   background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
-
 }
 
 /*social links*/
 #social-links {
   display: flex;
-  padding: 24px 0;
-  font-size: 24px;
   justify-content: center;
-  align-items: flex-start;
-  align-self: stretch;
+
+  padding: 24px 0;
+
+  font-size: 24px;
 }
 
 /*para as coisas ficarem ao centro perfeitas*/
@@ -142,6 +153,7 @@ ul li a:hover{
   align-items: center;
   justify-content: center;
   padding: 16px;
+
   transition: background 0.2s;
   border-radius: 50%;
 }
@@ -159,10 +171,29 @@ footer{
 /*media queries*/
 @media (min-width: 700px) {
   :root {
-    --bg-url: url (./images/bg-desktop.jpg)
+    --bg-url: url(./images/bg-desktop.jpg)
   }
  
   .light{
     --bg-url: url(./images/bg-desktop-light-.jpg)
+  }
+}
+
+/*animation*/
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to: {
+    left:50%
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to: {
+    left:0
   }
 }
